--- a/index.html
+++ b/index.html
@@ -32,12 +32,13 @@ body{
 .container{
     position:relative;
     text-align:center;
+    cursor:pointer;
 }
 
-/* SVG kalp */
+/* Kalp */
 .heart{
-    width:160px;
-    cursor:pointer;
+    width:220px;
+    height:220px;
     animation: beat 1.4s infinite;
 }
 
@@ -62,6 +63,7 @@ body{
     opacity:0;
     transform:scale(.8);
     transition:.5s;
+    pointer-events:none;
 }
 
 .message.show{
@@ -71,7 +73,7 @@ body{
 
 .message h1{
     margin:0;
-    font-size:22px;
+    font-size:26px;
 }
 
 /* Havai fişek */
@@ -88,13 +90,13 @@ canvas{
 
 <div class="top-text">Enes'ten Rumeysa'ya ❤️</div>
 
-<audio id="music" loop>
+<audio id="music" loop preload="auto">
 <source src="https://cdn.pixabay.com/download/audio/2022/03/15/audio_4e6cbd9d4f.mp3">
 </audio>
 
 <canvas id="fireworks"></canvas>
 
-<div class="container">
+<div class="container" id="container">
 
     <!-- SVG KALP -->
     <svg class="heart" id="heart" viewBox="0 0 32 29.6">
@@ -113,16 +115,23 @@ canvas{
 </div>
 
 <script>
-const heart=document.getElementById("heart");
-const message=document.getElementById("message");
-const music=document.getElementById("music");
+const container = document.getElementById("container");
+const heart = document.getElementById("heart");
+const message = document.getElementById("message");
+const music = document.getElementById("music");
 
-heart.onclick=function(){
+/* Her yere tıklanınca çalışsın */
+container.addEventListener("click", function(){
+
+    // Müzik (mobil uyumlu)
+    music.currentTime = 0;
     music.play().catch(()=>{});
+
     heart.classList.add("small");
     message.classList.add("show");
+
     launchFireworks();
-}
+});
 
 /* Havai fişek */
 const canvas=document.getElementById("fireworks");
@@ -133,18 +142,22 @@ canvas.height=window.innerHeight;
 let particles=[];
 
 function launchFireworks(){
-    for(let i=0;i<5;i++){
-        createExplosion(Math.random()*canvas.width,Math.random()*canvas.height/2);
+    for(let i=0;i<6;i++){
+        createExplosion(
+            Math.random()*canvas.width,
+            Math.random()*canvas.height/2
+        );
     }
 }
 
 function createExplosion(x,y){
-    const colors=["#ff2d77","#ffcc00","#ffffff"];
-    for(let i=0;i<50;i++){
+    const colors=["#ff2d77","#ffcc00","#ffffff","#00e5ff"];
+    for(let i=0;i<60;i++){
         particles.push({
-            x,y,
+            x:x,
+            y:y,
             angle:Math.random()*Math.PI*2,
-            speed:Math.random()*4+1,
+            speed:Math.random()*4+2,
             life:60,
             color:colors[Math.floor(Math.random()*colors.length)]
         });
@@ -153,17 +166,27 @@ function createExplosion(x,y){
 
 function animate(){
     ctx.clearRect(0,0,canvas.width,canvas.height);
+
     particles.forEach((p,i)=>{
         p.x+=Math.cos(p.angle)*p.speed;
         p.y+=Math.sin(p.angle)*p.speed;
         p.life--;
+
         ctx.fillStyle=p.color;
         ctx.fillRect(p.x,p.y,2,2);
+
         if(p.life<=0) particles.splice(i,1);
     });
+
     requestAnimationFrame(animate);
 }
 animate();
+
+/* Resize */
+window.addEventListener("resize",()=>{
+    canvas.width=window.innerWidth;
+    canvas.height=window.innerHeight;
+});
 </script>
 
 </body>
